修改order的proto文件中id改uint64, 整合pay, candidate和token中间件
