# server/candidate/controller/api/v1/candidate.go
@@ -7,15 +7,15 @@ import (
 	"candidate/controller"
 	"candidate/service"
 	"candidate/tools/message"
+	"common/middleware/token/user"
 	"common/tools/logging"
 	"github.com/gin-gonic/gin"
 	"net/http"
-	"strconv"
 )
 
 type candidateRecv struct {
 	Date       string   `json:"date" binding:"required"`       // 发车日期 yyyy-mm-dd
-	TrainID    int      `json:"train_id" binding:"required"`   // 车次
+	TrainID    uint     `json:"train_id" binding:"required"`   // 车次
 	Passengers []string `json:"passengers" binding:"required"` // 乘客id
 }
 
@@ -28,9 +28,8 @@ type candidateSend struct {
 // @Description 发送需要候补的信息给服务器, 服务器将执行候补功能
 // @Accept json
 // @Produce json
-// @Param userID query int true "用户ID"
-// @Param username query string true "用户名"
-// @Param wantPayR body v1.candidateRecv true "需要接受的信息"
+// @Param token query string true "认证信息"
+// @Param candidateRecv body v1.candidateRecv true "需要接受的信息"
 // @Success 200 {object} controller.JSONResult{data=v1.candidateSend} "返回成功"
 // @Failure 400 {object} controller.JSONResult{}
 // @Router / [post]
@@ -43,19 +42,21 @@ func Candidate(c *gin.Context) {
 		send.Response(http.StatusOK, controller.NewJSONResult(message.PARAMS_ERROR, noData))
 		return
 	}
-	userID, err := strconv.Atoi(c.Query("userID"))
-	if err != nil {
-		logging.Error(err)
+	userInfo, ok := user.GetUserInfo(c)
+	if !ok {
+		// token数据出错
 		send.Response(http.StatusOK, controller.NewJSONResult(message.PARAMS_ERROR, noData))
 		return
 	}
+	// 创建service层
 	canService, err := service.NewCandidateService()
 	if err != nil {
 		logging.Error(err)
 		send.Response(http.StatusOK, controller.NewJSONResult(message.ERROR, noData))
 		return
 	}
-	oosID, err := canService.CacheCandidate(userID, cr.TrainID, cr.Date, cr.Passengers)
+	// 缓存订单并且获得outsideID
+	oosID, err := canService.CacheCandidate(userInfo.UserId, cr.TrainID, cr.Date, cr.Passengers)
 	if err != nil {
 		logging.Error(err)
 		send.Response(http.StatusOK, controller.NewJSONResult(message.ERROR, noData))
