# server/pay/controller/api/v1/refund.go
@@ -20,8 +20,7 @@ type refundAbbRecv struct {
 // @Description 给订单号然后进行退款操作
 // @Accept json
 // @Produce json
-// @Param userID query string true "用户ID"
-// @Param username query string true "用户名"
+// @Param token query string true "认证信息"
 // @Param refundR body v1.refundAbbRecv true "订单信息"
 // @Success 200 {object} controller.JSONResult{} "成功信息"
 // @Failure 400 {object} controller.JSONResult{}
