# server/pay/controller/api/v1/wantPay.go
@@ -4,10 +4,12 @@
 package v1
 
 import (
+	"common/middleware/token/user"
 	"common/tools/logging"
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"pay/controller"
+	"pay/service"
 	"pay/tools/message"
 )
 
@@ -25,8 +27,7 @@ type wantPayAbbSend struct {
 // @Description 获得支付需要的来自支付宝的OrderInfo
 // @Accept json
 // @Produce json
-// @Param userID query string true "用户ID"
-// @Param username query string true "用户名"
+// @Param token query string true "认证信息"
 // @Param wantPayR body v1.wantPayAbbRecv true "需要接受的信息"
 // @Success 200 {object} controller.JSONResult{data=v1.wantPayAbbSend} "返回订单号和OrderInfo"
 // @Failure 400 {object} controller.JSONResult{}
@@ -40,9 +41,17 @@ func WantPayAbb(c *gin.Context) {
 		sender.Response(http.StatusOK, controller.NewJSONResult(message.PARAMS_ERROR, noData))
 		return
 	}
+	// 检查该用户是持有该订单
+	userInfo, ok := user.GetUserInfo(c)
+	if !ok {
+		sender.Response(http.StatusOK, controller.NewJSONResult(message.PARAMS_ERROR, noData))
+		return
+	}
+
 	var wantPayS wantPayAbbSend
-	// TODO 亲求支付宝获取OrderInfo, 然后填充wantPayS
-	wantPayS.OrderInfo = "asdiuyUYGFYGV7567hgvfhjv"
+	var payService service.PayService
+	// 这里并没有接入支付宝所以只是用一个固定的OrderInfo
+	wantPayS.OrderInfo = payService.WantPay(userInfo.UserId, wantPayR.OrderOutsideID)
 	wantPayS.OrderOutsideID = wantPayR.OrderOutsideID
 	sender.Response(http.StatusOK, controller.NewJSONResult(message.OK, wantPayS))
 }
