# server/pay/docs/swagger.yaml
@@ -55,14 +55,9 @@ paths:
       - application/json
       description: 服务器对支付进行验证
       parameters:
-      - description: 用户ID
+      - description: 认证信息
         in: query
-        name: userID
-        required: true
-        type: string
-      - description: 用户名
-        in: query
-        name: username
+        name: token
         required: true
         type: string
       - description: 需要接受的信息
@@ -89,14 +84,9 @@ paths:
       - application/json
       description: 给订单号然后进行退款操作
       parameters:
-      - description: 用户ID
+      - description: 认证信息
         in: query
-        name: userID
-        required: true
-        type: string
-      - description: 用户名
-        in: query
-        name: username
+        name: token
         required: true
         type: string
       - description: 订单信息
@@ -123,14 +113,9 @@ paths:
       - application/json
       description: 获得支付需要的来自支付宝的OrderInfo
       parameters:
-      - description: 用户ID
+      - description: 认证信息
         in: query
-        name: userID
-        required: true
-        type: string
-      - description: 用户名
-        in: query
-        name: username
+        name: token
         required: true
         type: string
       - description: 需要接受的信息
